--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -17,6 +17,7 @@ body {
   overflow: hidden;
   user-select: none;
   -webkit-user-select: none;
+  cursor: default;
 }
 
 .overlay-root {
